# google-cloud-storage-rs

./: Cargo.toml
.github/workflows/: cargo.yaml
src/: api.rs  header.rs  lib.rs  middleware.rs  yup_oauth2.rs
src/api/: future.rs  json.rs  tests.rs  xml.rs
src/api/json/: patch_object.rs
src/api/xml/: delete_object.rs  get_object.rs  head_object.rs  put_object.rs
src/middleware/: yup_oauth2.rs
