[package]
name = "google-cloud-storage"
version = "0.1.0"
edition = "2021"

[features]
default = ["yup-oauth2"]
yup-oauth2 = ["dep:hyper-util", "dep:yup-oauth2"]

[dependencies]
base64 = "0.22.1"
bytes = "1.9.0"
futures = { version = "0.3.31", default-features = false }
headers = "0.4.0"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["client-legacy", "tokio"], optional = true }
mime = "0.3.17"
percent-encoding = "2.3.1"
pin-project = "1.1.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_with = { version = "3.12.0", features = ["base64"] }
thiserror = "2.0.9"
tower = { version = "0.5.2", features = ["util"] }
yup-oauth2 = { version = "11.0.0", default-features = false, features = ["ring", "service-account", "__rustls"], optional = true }

[dev-dependencies]
hex-literal = "0.4.1"
hyper-rustls = "0.27.5"
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1"] }
md-5 = "0.10.6"
rustls = "0.23.20"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }
